Make-over of user-supplied assembly and orfs

--- a/conf/test.config
+++ b/conf/test.config
@@ -26,6 +26,9 @@ params {
     input    = params.pipelines_testdata_base_path + 'metatdenovo/samplesheet/samplesheet.csv'
     hmmfiles = 'https://raw.githubusercontent.com/nf-core/test-datasets/metatdenovo/test_data/PF00317.hmm,https://raw.githubusercontent.com/nf-core/test-datasets/metatdenovo/test_data/PF00848.hmm,https://raw.githubusercontent.com/nf-core/test-datasets/metatdenovo/test_data/PF03477.hmm,https://raw.githubusercontent.com/nf-core/test-datasets/metatdenovo/test_data/PF13597.hmm'
 
+    assembler      = 'megahit'
+    orf_caller     = 'prodigal'
+
     // Other options
     skip_eukulele  = true
     skip_eggnog    = true
