--- a/conf/test_eggnog.config
+++ b/conf/test_eggnog.config
@@ -17,6 +17,9 @@ params {
     // Input data
     input    = 'https://raw.githubusercontent.com/nf-core/test-datasets/metatdenovo/samplesheet/samplesheet.csv'
 
+    assembler      = 'megahit'
+    orf_caller     = 'prodigal'
+
     // parameters
     skip_eukulele  = true
     skip_eggnog    = false
