--- a/conf/test_eukulele.config
+++ b/conf/test_eukulele.config
@@ -17,6 +17,9 @@ params {
     // Input data
     input    = 'https://raw.githubusercontent.com/nf-core/test-datasets/metatdenovo/samplesheet/samplesheet.csv'
 
+    assembler      = 'megahit'
+    orf_caller     = 'prodigal'
+
     skip_eggnog    = true
     skip_kofamscan = true
     eukulele_db    = 'phylodb'
