--- a/conf/test_filter.config
+++ b/conf/test_filter.config
@@ -19,6 +19,9 @@ params {
 
     sequence_filter = 'https://github.com/nf-core/test-datasets/raw/metatdenovo/test_data/rrna.fna.gz'
 
+    assembler      = 'megahit'
+    orf_caller     = 'prodigal'
+
     skip_eukulele  = true
     skip_eggnog    = true
     skip_kofamscan = true
