--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -17,6 +17,9 @@ params {
     // Input data for full size test
     input = params.pipelines_testdata_base_path + 'metatdenovo/samplesheet/samplesheet_full_test.csv'
 
+    assembler      = 'megahit'
+    orf_caller     = 'prodigal'
+
     // parameters
     skip_eukulele   = false
     skip_eggnog     = false
