--- a/conf/test_spades.config
+++ b/conf/test_spades.config
@@ -19,11 +19,9 @@ params {
 
     // Assembler option
     assembler     = 'spades'
+    orf_caller     = 'prodigal'
 
     skip_eukulele  = true
     skip_eggnog    = true
     skip_kofamscan = true
-
-    // genomes parameter
-    genomes = ''
 }
