--- a/nextflow.config
+++ b/nextflow.config
@@ -11,10 +11,12 @@ params {
 
     // Input options
     input                        = null
-    assembly                     = null
+    user_assembly                = null
+    user_assembly_name           = 'user_assembly'
     genomes                      = null
-    protein_fasta                = null
-    gff                          = null
+    user_orfs_faa                = null
+    user_orfs_gff                = null
+    user_orfs_name               = 'user_orfs'
     se_reads                     = false
     validationSkipDuplicateCheck = false
     validationS3PathCheck        = false
@@ -42,7 +44,7 @@ params {
     save_bbnorm_fastq           = false
 
     // assembler option
-    assembler                   = 'megahit'
+    assembler                   = ''
     min_contig_length           = 0
     spades_flavor               = 'rna'
     save_formatspades           = false
@@ -53,7 +55,7 @@ params {
     bbmap_minid                 = 0.9
 
     // orf caller options
-    orf_caller                  = 'prodigal'
+    orf_caller                  = ''
     prodigal_trainingfile       = null
     prokka_batchsize            = 10.MB
 
