--- a/conf/test_transdecoder.config
+++ b/conf/test_transdecoder.config
@@ -17,6 +17,9 @@ params {
     // Input data
     input    = 'https://raw.githubusercontent.com/nf-core/test-datasets/metatdenovo/samplesheet/samplesheet.csv'
 
+    assembler     = 'megahit'
+    orf_caller     = 'prodigal'
+
     // params
     orf_caller     = 'transdecoder'
     skip_eukulele  = true
