--- a/nextflow.config
+++ b/nextflow.config
@@ -349,9 +349,10 @@ plugins {
 validation {
     defaultIgnoreParams = ["genomes"]
     monochromeLogs = params.monochrome_logs
+    lenientMode = true
     help {
         enabled = true
-        command = "nextflow run nf-core/metatdenovo -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
+        command = "nextflow run $manifest.name -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
         fullParameter = "help_full"
         showHiddenParameter = "show_hidden"
         beforeText = """
@@ -361,15 +362,15 @@ validation {
 \033[0;34m  |\\ | |__  __ /  ` /  \\ |__) |__         \033[0;33m}  {\033[0m
 \033[0;34m  | \\| |       \\__, \\__/ |  \\ |___     \033[0;32m\\`-._,-`-,\033[0m
                                         \033[0;32m`._,._,\'\033[0m
-\033[0;35m  nf-core/metatdenovo ${manifest.version}\033[0m
+\033[0;35m  ${manifest.name} ${manifest.version}\033[0m
 -\033[2m----------------------------------------------------\033[0m-
 """
-        afterText = """${manifest.doi ? "\n* The pipeline\n" : ""}${manifest.doi.tokenize(",").collect { "    https://doi.org/${it.trim().replace('https://doi.org/','')}"}.join("\n")}${manifest.doi ? "\n" : ""}
+        afterText = """${manifest.doi ? "* The pipeline\n" : ""}${manifest.doi.tokenize(",").collect { "  https://doi.org/${it.trim().replace('https://doi.org/','')}"}.join("\n")}${manifest.doi ? "\n" : ""}
 * The nf-core framework
     https://doi.org/10.1038/s41587-020-0439-x
 
 * Software dependencies
-    https://github.com/nf-core/metatdenovo/blob/master/CITATIONS.md
+    https://github.com/${manifest.name}/blob/master/CITATIONS.md
 """
     }
     summary {
