Set version to 1.1dev

--- a/nextflow.config
+++ b/nextflow.config
@@ -305,7 +305,6 @@ dag {
 
 manifest {
     name            = 'nf-core/metatdenovo'
-    author          = """Danilo Di Leo, Emelie Nilsson & Daniel Lundin""" // The author field is deprecated from Nextflow version 24.10.0, use contributors instead
     contributors    = [
         [
             name: 'Danilo Di Leo',
@@ -337,7 +336,7 @@ manifest {
     mainScript      = 'main.nf'
     defaultBranch   = 'master'
     nextflowVersion = '!>=24.04.2'
-    version         = '1.1'
+    version         = '1.1dev'
     doi             = ''
 }
 
